<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context="com.app.checkinmap.ui.activity.SignatureJustificationActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:gravity="center_vertical"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:orientation="vertical"
    android:layout_weight="1">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/signature_justification_question"
      android:textAlignment="center"
      android:textSize="18sp" android:textStyle="bold"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/signature_justification"
      android:textAlignment="center"/>

    <EditText
      android:id="@+id/etJustification"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="12dp"
      android:gravity="top|left"
      android:ems="10"
      android:lines="12"
      android:maxLines="12"
      android:backgroundTint="@color/colorBlack"
      android:inputType="textMultiLine"/>


  </LinearLayout>

  <LinearLayout
    android:id="@+id/linear_layout_controls"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:minHeight="50dp"
    android:orientation="horizontal"
    android:padding="10dp">

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/button_check"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="5dp"
      android:text="@string/check_out"
      android:textColor="@color/colorWhite"
      android:theme="@style/BlackButton" />


  </LinearLayout>

</LinearLayout>
