<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.checkinmap.ui.activity.SignatureActivity">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="10dp"
      android:orientation="vertical">

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/who_signs"
          android:textColor="@color/colorPrimary" android:textSize="18sp" android:textStyle="bold"/>

        <EditText
          android:id="@+id/etWhoSigns"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="top|left"
          android:ems="10"
          android:inputType="textCapWords"
          android:backgroundTint="@color/colorBlack"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/electronic_signature"
          android:textColor="@color/colorPrimary" android:textSize="18sp" android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:clickable="true"
            android:text="@string/text_clear"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        android:layout_weight="1">


        <com.simplify.ink.InkView
            android:id="@+id/ink"
            android:layout_width="match_parent"
            android:layout_height="250dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorBlack"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:padding="10dp">



        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/check_out"
            android:textColor="@color/colorWhite"
            android:theme="@style/BlackButton" />


    </LinearLayout>

</LinearLayout>
